src/mds/MDSRank.cc
@@ -427,6 +427,8 @@ bool MDSRank::_dispatch(Message *m, bool new_msg)
       m->put();
       return false;
     }
+
+    heartbeat_reset();
   }
 
   if (dispatch_depth > 1)
